Buscador acutalizado: muestra html y imagen

--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -35,7 +35,7 @@
     </mat-slide-toggle>
   </form>
   <div id="data">
-    <pre>{{paisesFiltrados}}</pre>
-    <pre>{{paisesPorContinente}}</pre>
-  </div>
+    <div [innerHTML]="paisesFiltrados"></div>
+    <div [innerHTML]="paisesPorContinente"></div>
+  </div>  
 </div>
