--- a/src/app/eolica/eolica.component.css
+++ b/src/app/eolica/eolica.component.css
@@ -23,11 +23,11 @@
 }
 
 .about-section.light-background {
-    background-color: #e0f7fa; /* Azul claro para representar el viento */
+    background-color: #e0f7fa; 
 }
 
 .about-section.dark-background {
-    background-color: #1e3a5f; /* Azul oscuro */
+    background-color: #1e3a5f;
     color: white;
 }
 
@@ -54,7 +54,7 @@ mat-tab-group {
 }
 
 mat-tab {
-    background-color: #2a6fb4; /* Azul representando el cielo */
+    background-color: #2a6fb4;
     padding: 15px;
     border-radius: 5px;
     cursor: pointer;
@@ -106,7 +106,7 @@ blockquote {
     font-style: italic;
     color: #333;
     padding: 20px;
-    border-left: 5px solid #7eb6d6; /* Azul viento */
+    border-left: 5px solid #7eb6d6;
     background-color: #f9f9f9;
     margin: 20px 0;
 }
