--- a/src/app/buscador/buscador.component.css
+++ b/src/app/buscador/buscador.component.css
@@ -24,9 +24,9 @@ mat-form-field {
     width: 100%;
 }
 
-mat-form-field input {
+/* mat-form-field input {
     color: black !important;
-}
+} */
 
 #data {
     margin-top: 20px;
