hacer uso util del toggle

--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -30,7 +30,7 @@
   </form>
 
   <mat-slide-toggle [checked]="countCtrl.disabled"
-    (change)="countCtrl.disabled ? countCtrl.enable() : countCtrl.disable()">
+    (change)="limpieza()">
     Desactivar entrada?
   </mat-slide-toggle>
 </div>
