Botón material para limpieza de info

--- a/src/app/buscador/buscador.component.html
+++ b/src/app/buscador/buscador.component.html
@@ -29,10 +29,12 @@
     </div>
   </form>
 
-  <mat-slide-toggle [checked]="countCtrl.disabled"
+  <button mat-stroked-button class="button" (click)="limpieza()">Limpiar</button>
+
+<!--   <mat-slide-toggle [checked]="countCtrl.disabled"
     (change)="limpieza()">
     Desactivar entrada?
-  </mat-slide-toggle>
+  </mat-slide-toggle> -->
 </div>
 
 <div id="data">
